--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "tests"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "@hokify/agenda": "^6.3.0",
+    "@types/react": "^18.2.37",
     "apis": "github:We-Mine-X-Inc/APIs#main",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
