--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.8.7",
     "@hokify/agenda": "^6.3.0",
     "@types/react": "^18.2.37",
+    "@mhoc/axios-digest-auth": "^0.8.0",
     "wemine-apis": "github:We-Mine-X-Inc/APIs#main",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
