--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "directories": {
     "test": "tests"
   },
+  "browser": {
+    "child_process": false
+  },
   "dependencies": {
     "@apollo/client": "^3.8.7",
     "@hokify/agenda": "^6.3.0",
